src/test/resources/entity_test/invalid/Employee3Bis.entity

employee3Bis { // entity name diferent from file name
  id : short { @Id @NotNull } ;
}
